# SinoRAG

./: .gitignore  .gitmodules  Cargo.toml  HANDOFF-dict-authority.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  tool_improvement.txt
.cargo/: config.toml
assets/cbeta/: buddhist_metadata_analysis.json  soothill.json
cbeta-pdf-creator/: Cargo.toml
cbeta-pdf-creator/assets/fonts/: README.md
cbeta-pdf-creator/src/: accumulator.rs  bilingual_generator.rs  fonts.rs  hocr_layer.rs  lib.rs  markdown.rs  typography.rs
cbeta-pdf-creator/tests/: markdown_smoke.rs
docs/: MCP_CONCURRENCY.md  PHRASE_INDEX_V2_DESIGN.md  tool-usage-map-and-other-info.md
docs/designs/: phrase-index-v2.md
fastembed-rs/: Cargo.toml  build.rs
fastembed-rs/examples/: tensorrt_smoke.rs
fastembed-rs/src/: init.rs  lib.rs  pooling.rs  tensorrt.rs  tensorrt_engine.cpp  tensorrt_engine.h
fastembed-rs/src/image_embedding/: impl.rs
fastembed-rs/src/models/: mod.rs  model_info.rs
fastembed-rs/src/reranking/: impl.rs
fastembed-rs/src/sparse_text_embedding/: impl.rs
fastembed-rs/src/text_embedding/: impl.rs  impl_direct.rs  init.rs  mod.rs
gui-installer/: INSTALLER-IMPROVEMENTS.md
gui-installer/sinorag-installer/: Cargo.toml  build.rs
gui-installer/sinorag-installer-winsafe/: Cargo.toml  build.rs
gui-installer/sinorag-installer-winsafe/src/: lib.rs  main.rs  uninstaller.rs
gui-installer/sinorag-installer/src/: lib.rs  main.rs  uninstaller.rs
handoff/: phase-a-correctness.md  phase-b-fingerprint-lenience.md  phase-c-shared-analyzer.md  phase-d-pt2-atomic-ingest.md  phase-d-real-catalog.md  phase-f1-first-tools.md  phase-g-index-format.md  phase-g-v3-format.md
scripts/: archive-target-cache.sh  phrase_index_migrate.py
src/: arrow_helpers.rs  catalog_index.rs  cbeta_sidecar.rs  cef.rs  cli.rs  datafusion_store.rs  dict.rs  document_table.rs  jsonout.rs  lib.rs  main.rs  memory.rs  models.rs  normalize.rs  pack.rs  parquet_metadata.rs  phrase_index.rs  research.rs  search_packet.rs  storage.rs  taxonomy_legend.rs  tei.rs  text_analyzer.rs  which.rs
src/agent/: mod.rs
src/agent/doctrine/: agents_md.md  mcp_instructions.md  mod.rs
src/commands/: absence_check.rs  build_pack.rs  canonical_source.rs  catalog_index.rs  cef.rs  cluster_hits.rs  collocation_search.rs  compare_usage.rs  document_table.rs  estimate.rs  expand_context.rs  expand_context_adaptive.rs  export.rs  find_first_mention.rs  first_attestation.rs  frontier.rs  ingest.rs  ingest_authority.rs  ingest_dict.rs  ingest_terebess.rs  init.rs  kanripo.rs  merge_cbeta.rs  mod.rs  outline_search.rs  pack.rs  parquet_info.rs  passage.rs  patch_metadata.rs  person_history.rs  person_resolve.rs  phrase_history.rs  phrase_index.rs  query_expand_terms.rs  research_packet.rs  run_tools.rs  search.rs  seed_pick.rs  similar_phrase.rs  status.rs  (+11 more)
src/embedding/: build.rs  cache.rs  fastembed_provider.rs  mod.rs  models.rs  provider.rs
src/ingest/: kanripo.rs  manifest.rs  mod.rs
src/mcp/: server.rs
src/registry/: mod.rs
src/research/: context_expand.rs  mod.rs
src/research_tools/: common.rs  evidence.rs  mod.rs  phrase.rs  scopes.rs  stats.rs
src/retrieval/: candidate.rs  mod.rs  pipeline.rs  ranking.rs  request.rs  scope.rs
src/setup/: mod.rs  opencode.rs
src/templates/: evidence_graph.rs  lineage_graph.rs  markdown_report.rs  mod.rs  pdf_report.rs  readzen_collection.rs  timeline_graph.rs
src/templates/research_packet/: assemble.rs  brief.rs  gather.rs  mod.rs  recipe.rs
src/templates/research_packet/recipes/: academic-default.json  full-genealogy.json  phrase-focused.json
src/templates/variants/: buddhist_terms.json  mod.rs  orthographic.json
src/tfidf/: index.rs  mod.rs  ngram.rs  quantize.rs
src/tools/: batch.rs  docs.rs  engine.rs  errors.rs  log.rs  mod.rs  registry.rs  requests.rs  responses.rs  spec.rs
src/vector_index/: mod.rs
tests/: milestone1.rs
