[package]
name = "sinorag"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "sinorag"
path = "src/main.rs"

[features]
default = []
local-embeddings = ["dep:fastembed", "dep:ort"]
local-embeddings-cuda = ["local-embeddings", "ort/cuda"]

[dependencies]
# fastembed: enabled by --features local-embeddings.
# ONNX Runtime is loaded dynamically at startup — provide a matching onnxruntime.dll
# (and its provider DLLs) either next to the executable or via the ORT_DYLIB_PATH env var.
# This avoids the version lock-in of ort's prebuilt download (whose CUDA EP only matches
# a narrow CUDA/cuDNN combination).
# On Windows the MSVC toolchain is still required to build the ort wrapper crate.
fastembed = { git = "https://github.com/Anush008/fastembed-rs", rev = "c34435d99c84a8e907c86cbde281984d810f31fa", optional = true, default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

arrow = "58"
parquet = { version = "58", features = ["arrow"] }
datafusion = { version = "53", features = ["parquet"] }
rusqlite = { version = "0.32", features = ["bundled"] }

rayon = "1.12"
regex = "1"
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ordered-float = "5"
hashbrown = "0.15"
rustc-hash = "2"
roaring = "0.10"
bincode = "1"
zstd = "0.13"

quick-xml = { version = "0.39", features = ["encoding"] }
unicode-normalization = "0.1"
unicode-general-category = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
glob = "0.3"

lazy_static = "1.5"
num_cpus = "1"
base64 = "0.22"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
wide = "0.7"
toml = "0.8"
thiserror = "2"
futures = "0.3.32"
indicatif = "0.17"
hnsw_rs = "0.3.4"
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic"] }

# MCP server (stdio). Local path checkout; bumped together with rust-sdk submodule.
rmcp = { version = "1.7.0", default-features = false, features = ["server", "transport-io", "schemars"] }

# Side-by-side EN/ZH PDF renderer used by `sinorag export-pdf`. Sibling crate
# in this repo. Was previously gated behind a `pdf-export` feature; integration
# is still evolving (input-shape negotiation with model-authored markdown) but
# the renderer itself is ready to build into every release.
cbeta-pdf-creator = { path = "cbeta-pdf-creator" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_SystemInformation"] }

# On Windows we additionally enable the DirectML EP symbols so a non-CUDA build can
# pick up DirectML at runtime. The CUDA EP symbols are gated by the local-embeddings-cuda
# feature (ort/cuda). With load-dynamic these features only enable EP bindings — the
# corresponding provider DLLs (onnxruntime_providers_*.dll) still have to ship alongside
# onnxruntime.dll. Runtime EP selection is in src/embedding/fastembed_provider.rs.
[target.'cfg(windows)'.dependencies.ort]
version = "=2.0.0-rc.12"
optional = true
default-features = false
features = ["load-dynamic", "directml"]

[profile.release]
lto = false
codegen-units = 16

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3"
