[package]
name = "sinorag-installer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "sinorag-installer"
path = "src/main.rs"

[[bin]]
name = "sinorag-uninstaller"
path = "src/uninstaller.rs"

[dependencies]
anyhow = "1"
flume = "0.11"
sevenz-rust = "0.6"
sinorag = { path = "../.." }
winsafe = { version = "0.0.27", features = ["gui", "shell"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
